<resources>
    <string name="app_name">CurrencyExchanger</string>
    <string name="head_title">Официальные курсы валют ЦБ на </string>
    <string name="char_code">Букв.код</string>
    <string name="nominal">Единиц</string>
    <string name="name">Валюта</string>
    <string name="value">Курс</string>
    <string name="first_tab">Список</string>
    <string name="second_tab">Конвертер</string>
    <string name="lastTimeUpdate">Последнее обновление: </string>
    <string name="enter_num">Введите число</string>
    <string name="want_to_have">Хочу приобрести</string>
    <string name="already_have">У меня есть</string>
    <string name="current_date">Курс актуален на:</string>
</resources>